Modificacao titulo e footer

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,4 @@
 <div class="header">
     <h1>Cuidadores na Assistência ao Paciente – Cuidados respiratórios na ELA</h1>
-    <h2>IEM - Insuflação-Exsuflação Mecânica</h2>
+    <h2>Equipamento de Insuflação-Exsuflação Mecânica (IEM) </h2>
 </div>
