Ajuste de acessibilidade

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,26 @@
+<section class="accessibility-bar-wrapper hidden-sm">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <a
+            href="#conteudo"
+            class="d-inline-block"
+            accesskey="1"
+            title="Link para ir ao conteúdo"
+            >Ir para o conteúdo <span class="numero-acessibilidade">1</span> </a
+          >
+          <a
+            href="#footer"
+            class="d-inline-block"
+            accesskey="3"
+            title="Ir para o rodapé"
+            >Ir para o rodapé <span class="numero-acessibilidade">2</span></a
+          >
+        </div>
+      </div>
+    </div>
+  </section>
 <div class="header">
-    <h1>Cuidadores na Assistência ao Paciente – Cuidados respiratórios na ELA</h1>
-    <h2>Equipamento de Insuflação-Exsuflação Mecânica (IEM) </h2>
+    <div>Cuidadores na Assistência ao Paciente – Cuidados respiratórios na ELA</div>
+    <div>Equipamento de Insuflação-Exsuflação Mecânica (IEM) </div>
 </div>
