--- a/src/scss/custom/components/_header.scss
+++ b/src/scss/custom/components/_header.scss
@@ -42,6 +42,12 @@
   
     }
   }
+
+  @media screen and (max-width: 1024px) {
+    .header:nth-child(2) {
+      font-size: 1.5rem;
+    }
+  }
   @media screen and (max-width: 414px) {
       .header:first-child {
         font-size: 1rem;
