--- a/src/scss/custom/components/_footer.scss
+++ b/src/scss/custom/components/_footer.scss
@@ -15,3 +15,14 @@ footer {
         height: auto;
     }
 }
+
+@media screen and (max-width: 500px) {
+    .logos {
+        display: flex;
+        flex-direction: column;
+
+        img {
+            margin-bottom: 10px;
+        }
+    }
+}
