--- a/src/scss/custom/components/_header.scss
+++ b/src/scss/custom/components/_header.scss
@@ -43,6 +43,12 @@
     }
   }
 
+@media screen and (max-width: 1118px ) {
+  
+  .header:nth-child(2) {
+    font-size: 1.5rem;
+  }
+}
   @media screen and (max-width: 1024px) {
     .header:nth-child(2) {
       font-size: 1.5rem;
